Add equals, hashCode & tests to ROIs
Still in progress... but enough done to be worth committing, I think.